editing tasks works! current sub-tasks get sent in the shadow realm

--- a/demeter-ui/src/css/task.css
+++ b/demeter-ui/src/css/task.css
@@ -114,9 +114,8 @@
 }
 
 .hisDayList .hisDayBtn {
-    width: 32%;
-    min-width: 10rem;
-    max-width: 48%;
+    width: 10rem;
+    margin-inline: .5rem;
 }
 
 .hisTaskList {
