converted single recipe back button to icon button boi

--- a/demeter-ui/src/css/style.css
+++ b/demeter-ui/src/css/style.css
@@ -267,6 +267,7 @@ select {
 /* buttons with Demeter theme */
 .btn {
     transition: all 0.15s;
+    justify-content: center;
 }
 
 .btn-demeter {
