responsive popup btn

--- a/demeter-ui/src/css/App.css
+++ b/demeter-ui/src/css/App.css
@@ -172,7 +172,8 @@
     margin: auto;
   }
   .btnBar>button:not(:last-child),
-  .filterBar>div:not(:last-child) {
+  .filterBar>div:not(:last-child),
+  .filterDrop>select:not(:last-child) {
     margin-bottom: .5rem;
   }
   .btnBar .btn-hidden {
