--- a/demeter-ui/src/css/task.css
+++ b/demeter-ui/src/css/task.css
@@ -13,7 +13,7 @@
     align-self: center;
 }
 
-.taskRowBox input, .taskRowBox .taskResponsable {
+.taskRowBox input, .taskRowBox .taskResponsable, .taskMaster {
     margin-inline: .5rem;
 }
 
@@ -23,13 +23,14 @@
 
 .taskRowBox .iconCheck {
     margin-right: .25rem;
+    align-self: center;
 }
 
 .taskRow {
     width: 100%;
 }
 
-.taskResponsable {
+.taskResponsable, .taskMaster {
     color: var(--demeter-grey);
 }
 
@@ -90,7 +91,7 @@
 
 .taskDisplayList {
     width: 80%;
-    margin: auto;
+    margin-inline: auto;
 }
 
 .taskDisplayList h3 {
@@ -132,4 +133,45 @@
 
 .hisTaskList>div:first-child hr.taskLine {
     display: none;
+}
+
+/* TASK RESPONSIVE */
+@media only screen and (max-width: 800px) {
+    .taskDisplayList {
+        width: 100%;
+    }
+    .taskRowList {
+        min-width: 100%;
+        line-height: 1.25;
+    }
+    .taskRow span {
+        word-break: break-word;
+    }
+    .taskName {
+        flex-wrap: nowrap;
+        text-align: left;
+        width: 100%;
+    }
+    .taskChildRow, .taskRow {
+        flex-direction: column;
+    }
+    .taskInputBox {
+        display: inline-flex;
+        justify-content: center;
+        margin-top: .25rem;
+    }
+    .taskInput {
+        margin-left: 0;
+    }
+    .taskMaster, .taskDesc {
+        width: 100%;
+        text-align: left;
+    }
+    .taskMaster {
+        margin-inline: 0;
+    }
+    .taskMobile {
+        display: flex;
+        flex-direction: column-reverse;
+    }
 }
