--- a/demeter-ui/src/css/style.css
+++ b/demeter-ui/src/css/style.css
@@ -58,6 +58,10 @@ select {
     border-radius: .25rem;
 }
 
+:focus-visible {
+    outline: none;
+}
+
 .alert {
     font-size: 1rem !important;
     margin: .5rem 0 !important;
