--- a/demeter-ui/src/css/account.css
+++ b/demeter-ui/src/css/account.css
@@ -34,3 +34,9 @@
 .accountEditBox {
     padding-left: .5rem;
 }
+
+@media only screen and (max-width: 800px) { 
+    .addAcc {
+        margin: 1rem auto;
+    }
+}
