--- a/demeter-ui/src/css/App.css
+++ b/demeter-ui/src/css/App.css
@@ -220,7 +220,7 @@
 
   .btnBar>button:not(:last-child),
   .filterBar>div:not(:last-child),
-  .filterDrop>select:not(:last-child) {
+  .filterDrop>select {
     margin-bottom: .5rem;
   }
 
