--- a/demeter-ui/src/css/style.css
+++ b/demeter-ui/src/css/style.css
@@ -6,8 +6,8 @@
     --demeter-green: #439e75;
     --demeter-green-v: #3E8E6A;
     --demeter-green-h: #e4eee9;
-    --demeter-orange: #bc5f04;
-    --demeter-orange-v: #a65505;
+    --demeter-orange: #c86604;
+    --demeter-orange-v: #bc5f04;
     --demeter-orange-h: #fff7ef;
     --demeter-grey: #696969;
     --demeter-purple: rgb(117, 67, 180, .15);
