vendor list mobile

--- a/demeter-ui/src/css/inventory.css
+++ b/demeter-ui/src/css/inventory.css
@@ -127,5 +127,18 @@ min-width: 3rem;
     }
     #qty_inv2 {
         min-width: 2.75rem;
-    }      
+    }
+}
+@media only screen and (max-width: 992px) { 
+    .vendorListHeader h4, .vendorInfo span {
+        width: 33% !important;
+        word-break: break-word;
+    }
+    .vendorInfo {
+        width: 100%;
+        margin-right: 0;
+    }
+    .vendorInfo+div {
+        margin-inline: auto;
+    }
 }
