--- a/demeter-ui/src/css/App.css
+++ b/demeter-ui/src/css/App.css
@@ -173,6 +173,19 @@
     width: 90%;
   }
 
+  .pageSplit {
+    flex-direction: column;
+  }
+  .pageSplit>div {
+    width: 100% !important;
+  }
+  .pageSplit>div:not(:last-child) {
+    margin-bottom: 1rem;
+  }
+  .pageSplit .popupForm {
+    padding: 0;
+  }
+
   .navbar {
     margin-top: 2rem;
     margin-bottom: 1rem;
@@ -183,9 +196,11 @@
     margin-bottom: .5rem;
     width: 100%;
   }
+
   .navbar .nav-item:last-child {
     margin-bottom: 0;
   }
+
   .navbar .nav-tabs {
     border: none;
   }
@@ -197,14 +212,17 @@
     margin-bottom: 0;
     padding: .25rem 0 !important
   }
+
   .navbar .nav-link:not(.active):hover {
     border-color: var(--demeter-green-v) !important;
     color: var(--demeter-green-v) !important;
   }
+
   .navbar .nav-link.active {
     background-color: var(--demeter-green) !important;
     color: white !important;
   }
+
   .navbar .nav-link.active:hover {
     background-color: var(--demeter-green-v) !important;
   }
