--- a/demeter-ui/src/css/style.css
+++ b/demeter-ui/src/css/style.css
@@ -116,7 +116,9 @@ input[type="file"] {
     background-color: var(--demeter-green-h);
 }
 
-.cellShade span, .cellShade div .cellShade label, .cellShade input {
+.cellShade span,
+.cellShade div .cellShade label,
+.cellShade input {
     align-self: center;
 }
 
@@ -297,7 +299,7 @@ input[type="file"] {
     line-height: 1.25;
 }
 
-.popupForm input#password:focus + .inputHint {
+.popupForm input#password:focus+.inputHint {
     display: inline-block;
     margin-top: .5rem;
 }
@@ -307,6 +309,7 @@ input[type="file"] {
         width: 95vw;
         margin-inline: auto;
     }
+
     .popupBtnBox>button {
         width: 8rem;
         margin-inline: .5rem;
@@ -323,6 +326,7 @@ input[type="file"] {
     background-color: var(--demeter-green);
     color: white;
 }
+
 .btn-demeter:hover {
     background-color: var(--demeter-green-v);
     color: white;
@@ -333,6 +337,7 @@ input[type="file"] {
     background-color: var(--demeter-black);
     color: white;
 }
+
 .btn-demeter-dark:hover,
 .btn-icon-dark:hover {
     background-color: var(--demeter-black-v);
@@ -352,16 +357,26 @@ input[type="file"] {
     background-color: var(--demeter-orange);
     color: white;
 }
+
 .btn-demeter-waxed:hover {
     background-color: var(--demeter-orange-v);
     color: white;
 }
+
 .btn-demeter-waxed:focus {
     border-color: var(--demeter-orange-v) !important;
     box-shadow: 0 0 0 .2rem rgb(200, 102, 4, 0.25) !important;
 }
 
-.btn-danger:focus {
+.btn-icon-danger {
+    background-color: #DC3545;
+    color: white;
+}
+.btn-icon-danger:hover {
+    background-color: #c82333;
+    color: white;
+}
+.btn-icon-danger:focus {
     border-color: #c82333 !important;
     box-shadow: 0 0 0 .2rem rgb(200, 35, 51, 0.25) !important;
 }
@@ -375,9 +390,11 @@ input[type="file"] {
     color: var(--demeter-green);
     text-decoration: solid;
 }
+
 .btn-link:hover {
     color: var(--demeter-green-v);
 }
+
 .btn-link:focus {
     border: none !important;
     box-shadow: none !important;
@@ -422,12 +439,10 @@ input[type="file"] {
     align-self: center;
 }
 
-.btn-icon-dark>[class*="icon"] {
+.btn-icon-dark>[class*="icon"],
+.btn-icon-outline:hover>[class*="icon"],
+.btn-icon-danger>[class*="icon"] {
     color: white;
-}
-
-.btn-icon-outline:hover>[class*="icon"] {
-    color: white
 }
 
 /* NAV LINK */
