--- a/demeter-ui/src/css/news.css
+++ b/demeter-ui/src/css/news.css
@@ -47,7 +47,7 @@
     border: 1.5px solid #EEE;
     width: 50%;
     border-radius: 5px;
-    margin: .5rem auto 2rem;
+    margin: 1rem auto;
 }
 
 .flexNewsPreview:last-child .newsLine {
@@ -106,5 +106,15 @@
 @media only screen and (max-width: 800px) { 
     .flexNewsPreview {
         width: 100%;
+    }
+    .newsBody .btnBar {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    .flexNewsEdit {
+        margin-inline: auto;
+    }
+    .flexNewsEdit.invisible {
+        display: none;
     }
 }
