correctly indented files and removed unused imports

--- a/demeter-ui/src/css/recipe.css
+++ b/demeter-ui/src/css/recipe.css
@@ -37,7 +37,8 @@
     margin-bottom: .5rem;
 }
 
-.createRecipePage, .singleRecipePage {
+.createRecipePage,
+.singleRecipePage {
     width: 80%;
     margin: auto;
     margin-bottom: 4rem;
@@ -123,7 +124,8 @@
     margin-bottom: .5rem;
 }
 
-.IngList .ingListCol, .IngList .editIngListCol {
+.IngList .ingListCol,
+.IngList .editIngListCol {
     width: 60%;
 }
 
@@ -175,28 +177,34 @@
     margin-bottom: .75rem;
 }
 
-@media only screen and (max-width: 800px) { 
+@media only screen and (max-width: 800px) {
     .recipeContent {
         width: 100%;
         flex-direction: column-reverse;
         justify-content: center;
     }
+
     .filterBox {
         margin-inline: auto;
         margin-bottom: 2rem;
     }
+
     .filterBox button {
         min-width: 15rem;
     }
+
     .recipeListBox {
         margin: 0;
         width: 100%;
     }
 
-    .ingListCol, .editIngListCol {
+    .ingListCol,
+    .editIngListCol {
         width: 50% !important;
     }
-    .ingListColS, .editIngListColS {
+
+    .ingListColS,
+    .editIngListColS {
         width: 25% !important;
     }
 
