task text wrapping

--- a/demeter-ui/src/css/style.css
+++ b/demeter-ui/src/css/style.css
@@ -180,7 +180,7 @@ input[type="file"] {
 
 .iconBullet {
     color: #CCC;
-    align-self: center;
+    align-self: baseline;
     transform: rotate(90deg);
 }
 
