--- a/demeter-ui/src/css/task.css
+++ b/demeter-ui/src/css/task.css
@@ -113,7 +113,7 @@
 }
 
 .taskDisplayList .accordion-button {
-    width: fit-content;
+    width: 100%;
     padding: 0;
     color: var(--demeter-orange);
     font-weight: bold;
