--- a/demeter-ui/src/css/style.css
+++ b/demeter-ui/src/css/style.css
@@ -12,10 +12,21 @@
     --demeter-grey: #696969;
     --demeter-purple: rgb(117, 67, 180, .15);
     --demeter-mauve: #75439e;
-    --demeter-mauve-v: #6A3E8E
-    ;
+    --demeter-mauve-v: #6A3E8E;
     --demeter-blue: #437a9e;
     --demeter-blue-v: #3f7091;
+}
+
+.greenText {
+    color: var(--demeter-green) !important;
+}
+
+.blueText {
+    color: var(--demeter-blue) !important;
+}
+
+.purpleText {
+    color: var(--demeter-mauve) !important;
 }
 
 /* defaults */
