--- a/demeter-ui/src/css/App.css
+++ b/demeter-ui/src/css/App.css
@@ -81,7 +81,7 @@
   display: flex;
   width: fit-content;
   flex-wrap: nowrap;
-  margin-right: .75rem;
+  /* margin-right: .75rem; */
 }
 
 .demeterLogo {
@@ -90,6 +90,7 @@
   align-self: center;
   transition: all .15s;
   border-radius: .25rem;
+  margin-right: .5rem;
 }
 
 .demeterLogo:hover {
@@ -102,8 +103,8 @@
   margin-bottom: 0;
   font-size: 1rem;
   align-self: center;
-  margin-left: .5rem;
-  margin-right: .25rem;
+  /* margin-left: .5rem; */
+  margin-right: .5rem;
 }
 
 .footerText {
