--- a/demeter-ui/src/css/task.css
+++ b/demeter-ui/src/css/task.css
@@ -160,11 +160,15 @@
     width: 100%;
 }
 
-.hisTaskRow .hisTask {
+.hisTaskRow:not(.taskParent) .hisTask {
     width: 75%;
 }
 
-.hisTaskRow span:last-child {
+.hisTaskRow.taskParent .hisTask {
+    width: 100%;
+}
+
+.hisTaskRow:not(.taskParent) span:last-child {
     width: 4.25rem;
     text-align: right;
     margin-left: auto;
