--- a/demeter-ui/src/css/task.css
+++ b/demeter-ui/src/css/task.css
@@ -174,6 +174,10 @@
     margin-left: auto;
 }
 
+.hisTaskRow.taskParent span:last-child {
+    text-align: left;
+}
+
 .hisTaskList>div:first-child hr.taskLine {
     display: none;
 }
@@ -185,6 +189,10 @@
 
 .taskParent span:first-child {
     color: var(--demeter-green);
+}
+
+.hisCat {
+    color: var(--demeter-blue);
 }
 
 
